[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.13", features = ["derive"] } 
colored="2"
jsonxf="1.1"
mime="0.3"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
tokio={version = "1", features = ["full"]}
syntect="5.2.0"